<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Mobilblogg!</string>
	<string name="app_name">MobilBlogg</string>
	<string name="start">Starta</string>
	<string name="splashtop">Mobilblogg.nu för Android</string>
	<string name="splashButtonHandler">splashClickHandler</string>
	<string name="username">Användarnamn</string>
	<string name="password">Lösenord</string>
	<string name="login">Logga in</string>
	<string name="tags">Taggar</string>
	<string name="sep">Separera taggarna med mellanslag</string>
	<string name="moblog">mobilblogg</string>
	<string name="geterror">Något misslyckades</string>
	<string name="loginerror">Inloggningen misslyckades</string>
	<string name="secondssince">sekunder sen</string>
	<string name="minutessince">minuter sen</string>
	<string name="hoursince">timme sen</string>
	<string name="hourssince">timmar sen</string>
	<string name="by">av</string>
	<string name="camera">Kamera</string>
	<string name="gallery">Galleriet</string>
	<string name="reload">Ladda om</string>
	<string name="no_network">Hittar ingen Internetanslutning</string>
	<string name="loadmore">Ladda fler</string>
	<string name="version">Version:</string>

	<string name="ok">OK</string>
	<string name="abort">Avbryt</string>
	<string name="postuploaded">Inlägget uppladdat</string>
	<string name="blogfailure">Bloggningen misslyckades, fel hemligt ord?</string>

	<string name="all">Visa för alla</string>
	<string name="blog">Alla, inte på förstasidan</string>
	<string name="members">Medlemmar</string>
	<string name="friends">Mina vänner</string>
	<string name="me">Mig</string>
	<string name="gotobuttontext">Gå till</string>
	<string name="gotobloghint">Blogg</string>
	<string name="blognamenotfound">Det finns ingen blogg med det namnet</string>
	<string name="novalidemail">Email-adressen är ogiltig.</string>
	<string name="fillallfields">Fyll i alla fält.</string>
	<string name="badpassword">Att ha samma lösenord som användarnamn är ingen bra idé, alls!</string>
	<string name="passwordlength">Minst 4 tecken i lösenordet.</string>
	<string name="nomoreposts">Inga fler inlägg</string>
	<string name="noposts">Inga inlägg</string>
	<string name="registertext">Fyll i uppgifterna nedan för att starta en mobilblogg</string>
	<string name="secretwordtext">Det hemliga ordet används som identifiering vid bloggning</string>
	
	<string name="mobilbloggintro">Mobilbloggning är ett enkelt sätt att publicera
		bilder tagna med mobiltelefonkamera på en mobilblogg.
	</string>
	<string name="remember_me">Kom ihåg mig</string>
	<string name="remember">Kom ihåg</string>
	<string name="loginButtonHandler">loginClickHandler</string>
	<string name="loginViewName">Logga in</string>
	<string name="logging_in">Loggar in</string>
	<string name="mainMenuMyBlogg">Min blogg</string>
	<string name="mainMenuButtonHandler">mainMenuClickHandler</string>
	<string name="mainMenuMyStartPage">Mina vänner</string>
	<string name="mainMenuUser">Blogg</string>
	<string name="mainMenuLogout">Logga ut</string>
	<string name="mainMenuFirstPage">Förstasidan</string>

	<string name="please_wait">Vänligen vänta</string>
	<string name="loading">Laddar...</string>
	<string name="loading_images">Laddar fler bilder</string>
	<string name="empty">Tom</string>
	<string name="register">Starta mobilblogg</string>
	<string name="repeatpassword">Bekräfta lösenordet</string>
	<string name="email">E-postadress</string>
	<string name="usernameinuse">Användarnamnet är upptaget eller ogiltigt. Bara bokstäver a till z och siffror är tillåtna.</string>
	<string name="enjoy">Om du tycker om</string>
	<string name="please_rate">kan du väl betygsätta den på Market?</string>
	<string name="rate">Betygsätt</string>
	<string name="later">Påminn mig senare</string>
	<string name="no">Nej tack</string>	
	
	
	
	<string name="bloggdialogtitle">Blogga</string>
	<string name="bloggdialogtext">Ta en bild med kameran eller välj en tidigare tagen
		bild i galleriet?
	</string>

	<color name="bgcolor">#6492A6</color>
	<color name="colorwhite">#FFFFFF</color>
	<color name="colorblack">#000000</color>
	<color name="colorbg">#E7E7E7</color>
	<color name="colorgray">#C0C0C0</color>
	<color name="colordarkgray">#454545</color>
	<color name="colorlightgray">#7b7b7b</color>
	<color name="colorverylightgray">#F0F0F0</color>
	<color name="colorbutton">#8C8D8C</color>
	<color name="textcolor">#333333</color>

	<string name="takepicture">Ta bild</string>
	<string name="cameraButtonHandler">cameraClickHandler</string>
	<string name="headline">Rubrik</string>
	<string name="body">Text</string>
	<string name="composeButtonHandler">composeClickHandler</string>
	<string name="upload">Ladda upp</string>
	<string name="cancel">Avbryt</string>
	<string name="send">Skicka</string>
	<string name="mainMenuUploadPage">Blogga</string>
	<string name="secretWord">Hemligt ord</string>
	<string name="rights">Ska synas för</string>
	<string name="startPageButtonHandler">startPageClickHandler</string>
	<string name="blogg">Till blogg</string>
	<string name="firstcomment">Kommentera</string>
	<string name="comment">kommentar</string>
	<string name="comments">kommentarer</string>
	<string name="bigcomments">Kommentarer</string>
	<string name="writecomment">Skriv en kommentar</string>
	<string name="writeCommentButtonHandler">writeCommentClickHandler</string>
	<string name="commentButtonHandler">commentClickHandler</string>
	<string name="blogornot">Vill du blogga den här bilden?</string>
</resources>
