<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="20dip"
	android:fillViewport="true" android:background="@color/colorwhite">

	<ImageView android:src="@drawable/mobilblogglogo"
		android:layout_height="wrap_content" android:focusable="false"
		android:layout_width="wrap_content" android:layout_marginBottom="5dip"
		android:layout_gravity="center" android:layout_centerHorizontal="true" />

	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/mobilbloggintro"
		android:textColor="@color/textcolor" android:textSize="16dip"
		android:layout_marginBottom="10dip" android:layout_gravity="center" />

	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text=""
		android:textColor="@color/textcolor" android:textSize="14dip"
		android:layout_marginBottom="10dip" android:layout_gravity="center" />

	<EditText android:id="@+id/EditText01" android:layout_height="wrap_content"
		android:singleLine="true" android:layout_width="fill_parent"
		android:hint="@string/username" />

	<EditText android:id="@+id/EditText02" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:inputType="textPassword"
		android:singleLine="true" android:hint="@string/password" />

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@color/colorwhite">

		<Button android:id="@+id/login" android:layout_width="120dip"
			android:layout_height="wrap_content" android:text="@string/login"
			android:onClick="@string/splashButtonHandler" android:background="@drawable/styledbutton"
			style="@style/ButtonText" />
		<CheckBox android:id="@+id/check01" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="15dip"
			android:text="@string/remember_me" android:textColor="@color/textcolor" />
	</LinearLayout>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="bottom|center">
		<Button android:id="@+id/register" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/register"
			android:onClick="@string/splashButtonHandler" android:background="@drawable/styledbutton"
			style="@style/ButtonText" android:layout_alignParentBottom="true" />
	</RelativeLayout>
</LinearLayout>