<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/bgcolor">

	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/username"
		android:textColor="@color/textcolor"></TextView>
	<EditText android:id="@+id/EditText01" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:singleLine="true"></EditText>
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/password"
		android:textColor="@color/textcolor"></TextView>
	<EditText android:id="@+id/EditText02" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:inputType="textPassword"
		android:singleLine="true"></EditText>

	<Button android:id="@+id/Button01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/login"
		android:capitalize="words" android:onClick="@string/loginButtonHandler"></Button>
</LinearLayout>