<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/bgcolor">

	<Button android:id="@+id/Button01" android:capitalize="words"
		android:layout_height="wrap_content" android:text="@string/mainMenuMyBlogg"
		android:onClick="@string/mainMenuButtonHandler" android:layout_width="fill_parent"></Button>
	<Button android:id="@+id/Button02" android:capitalize="words"
		android:layout_height="wrap_content" android:text="@string/mainMenuMyStartPage"
		android:onClick="@string/mainMenuButtonHandler" android:layout_width="fill_parent"></Button>
	<Button android:id="@+id/Button03" android:capitalize="words"
		android:layout_height="wrap_content" android:text="@string/mainMenuStartPage"
		android:onClick="@string/mainMenuButtonHandler" android:layout_width="fill_parent"></Button>
		
</LinearLayout>
